changed the color of the collapsable bar to dark gray + changed the size of the text area of the comment but wen need to test it out after we fix the bug + I need to add the class in the right place so the changes can be applied

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -22,8 +22,8 @@
   h2 {
     // font-family
     color: white ;
-    width: 300px;
-    font-size: 55px;
+    width: 408px;
+    font-size: 70px;
     line-height: 1em;
     text-shadow: 0 0 4px #00000022;
 
