--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -23,7 +23,7 @@
 
 .comment-card {
     color: white;
-    background-color: $duck-egg-blue;
+    background-color: $dark-gray;
     text-decoration: none;
     width: 100%;
     height: 34px;
@@ -38,7 +38,11 @@
     word-wrap: break-word;
     background-clip: border-box;
     border-radius: 2px;
-    background-color: #f8f9fa;
-    z-index: 2;
+    background-color: $dark-gray;
+    z-index: 4;
 
+}
+
+.comment-text {
+  height: 211px;
 }
